builtins/trybuild_tests/enforce_return_fail.stderr
error: Functions can only return GenericArguments of type ["VMResult", "Option"], try wrapping this value in Option or VMResult.
 --> trybuild_tests/enforce_return_fail.rs:7:28
  |
7 | pub fn invalid_return() -> Result<(), ()> {
  |                            ^^^^^^
